Update 2.2.2
- added a new item "neutronium"
- added new crafting recipe for a neutron bomb