@@ -9,7 +9,7 @@ loader_version=0.13.1
 fabric_version=0.46.4+1.18
 
 # Mod Properties
-mod_version=2.2.1
+mod_version=2.2.2
 maven_group=net.ethermod
 archives_base_name=blackether
 # Dependencies
